[tool.poetry]
name = "recsys-online-serving"
version = "0.1.0"
description = ""
authors = ["Kim_SuBeen <sbkim8519@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
fastapi = {extras = ["all"], version = "^0.105.0"}
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
transformers = "4.35.2"
pytorch-lightning = "2.1.2"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
pillow = "^10.2.0"
torchvision = "^0.15.0"
torch = "2.0.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
